navigation-scss: fix background overflow

--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -11,12 +11,12 @@
     box-shadow: 0 1rem 3rem rgba($color-black, .1);
     transition: transform .8s cubic-bezier(0.86, 0, 0.07, 1);
     @include respond(tab-port) {
-      top: 4.5rem;
-      right: 4.5rem;
+      top: 5rem;
+      right: 5rem;
     }
     @include respond(phone) {
-      top: 3.5rem;
-      right: 3.5rem;
+      top: 4rem;
+      right: 4rem;
     }
   }
   &__button {
